--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:background="#FFFFFF">
 
     <TextView android:text="@string/title" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -11,8 +12,9 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
-        android:textSize="32dp"
-        android:typeface="sans" />
+        android:textSize="28dp"
+        android:typeface="sans"
+        android:textColor="#303030"/>
 
     <Button
         android:layout_width="240dp"
@@ -23,7 +25,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
         android:tag="@string/spotify"
-        android:onClick="sendMessageOnClick" />
+        android:onClick="sendMessageOnClick"
+        android:background="#03A9F4" />
 
     <Button
         android:layout_width="240dp"
@@ -34,7 +37,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
         android:tag="@string/scores"
-        android:onClick="sendMessageOnClick" />
+        android:onClick="sendMessageOnClick"
+        android:background="#03A9F4" />
 
     <Button
         android:layout_width="240dp"
@@ -45,7 +49,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
         android:tag="@string/library"
-        android:onClick="sendMessageOnClick" />
+        android:onClick="sendMessageOnClick"
+        android:background="#03A9F4" />
 
     <Button
         android:layout_width="240dp"
@@ -56,7 +61,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
         android:tag="@string/bigger"
-        android:onClick="sendMessageOnClick" />
+        android:onClick="sendMessageOnClick"
+        android:background="#03A9F4" />
 
     <Button
         android:layout_width="240dp"
@@ -67,7 +73,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
         android:tag="@string/xyz"
-        android:onClick="sendMessageOnClick" />
+        android:onClick="sendMessageOnClick"
+        android:background="#03A9F4" />
 
     <Button
         android:layout_width="240dp"
@@ -78,6 +85,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
         android:tag="@string/caps"
-        android:onClick="sendMessageOnClick" />
+        android:onClick="sendMessageOnClick"
+        android:background="#03A9F4" />
 
 </RelativeLayout>
