--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:layout_marginTop="28dp"
         android:textSize="28dp"
         android:typeface="sans"
-        android:textColor="#303030"/>
+        android:textColor="#303030"
+        android:fontFamily="sans-serif-condensed-light" />
 
     <Button
         android:layout_width="240dp"
@@ -26,7 +27,8 @@
         android:layout_marginTop="8dp"
         android:tag="@string/spotify"
         android:onClick="sendMessageOnClick"
-        android:background="#03A9F4" />
+        android:background="#03A9F4"
+        android:fontFamily="sans-serif-condensed" />
 
     <Button
         android:layout_width="240dp"
@@ -38,7 +40,8 @@
         android:layout_marginTop="8dp"
         android:tag="@string/scores"
         android:onClick="sendMessageOnClick"
-        android:background="#03A9F4" />
+        android:background="#03A9F4"
+        android:fontFamily="sans-serif-condensed" />
 
     <Button
         android:layout_width="240dp"
@@ -50,7 +53,8 @@
         android:layout_marginTop="8dp"
         android:tag="@string/library"
         android:onClick="sendMessageOnClick"
-        android:background="#03A9F4" />
+        android:background="#03A9F4"
+        android:fontFamily="sans-serif-condensed" />
 
     <Button
         android:layout_width="240dp"
@@ -62,7 +66,8 @@
         android:layout_marginTop="8dp"
         android:tag="@string/bigger"
         android:onClick="sendMessageOnClick"
-        android:background="#03A9F4" />
+        android:background="#03A9F4"
+        android:fontFamily="sans-serif-condensed" />
 
     <Button
         android:layout_width="240dp"
@@ -74,7 +79,8 @@
         android:layout_marginTop="8dp"
         android:tag="@string/xyz"
         android:onClick="sendMessageOnClick"
-        android:background="#03A9F4" />
+        android:background="#03A9F4"
+        android:fontFamily="sans-serif-condensed" />
 
     <Button
         android:layout_width="240dp"
@@ -86,6 +92,7 @@
         android:layout_marginTop="8dp"
         android:tag="@string/caps"
         android:onClick="sendMessageOnClick"
-        android:background="#03A9F4" />
+        android:background="#03A9F4"
+        android:fontFamily="sans-serif-condensed" />
 
 </RelativeLayout>
